state updated based on previous state

--- a/3. Events and States/Events_States.ipynb
+++ b/3. Events and States/Events_States.ipynb
@@ -280,9 +280,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "09608dd9-38ae-4761-a3cb-bcb71e605ab0",
+   "metadata": {},
+   "source": [
+    "### Updating state based previous state correctly\n",
+    "\n",
+    "A best practice and recommendation is that state update that *depend on some previous state* should be performed with the help of a function that's passed to the state-updating function. \n",
+    "\n",
+    "#### Incorrect way\n",
+    "\n",
+    "```js\n",
+    "function Counter() {\n",
+    "    const [counter, setCounter] = useState(0);\n",
+    "    \n",
+    "    function incrementCounterHandler() {\n",
+    "        setCounter(counter + 1);\n",
+    "    };\n",
+    "    \n",
+    "    return (\n",
+    "        <>\n",
+    "            <p> Counter Value: {counter}</p>\n",
+    "            <button onClick={incrementCounterHandler}>Increment</button>\n",
+    "        </>\n",
+    "    );\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "#### correct way\n",
+    "\n",
+    "```js\n",
+    "function Counter() {\n",
+    "    const [counter, setCounter] = useState(0);\n",
+    "    \n",
+    "    function incrementCounterHandler() {\n",
+    "        setCounter(function(prevCounter) => {return prevCounter + 1});\n",
+    "    };\n",
+    "    \n",
+    "    return (\n",
+    "        <>\n",
+    "            <p> Counter Value: {counter}</p>\n",
+    "            <button onClick={incrementCounterHandler}>Increment</button>\n",
+    "        </>\n",
+    "    );\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "This might look a bit strange as a function is passed as an argument to the state-updating function, but React won't store that function as the new state value. Instead, when receiving a function as new state value in the state-updating function, React will call that function for you and pass the latest state value to that function. Therefore, you should provide a function that accepts at least one parameter: the previous state value. This value will be passed into the function auto"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f8e5dfa-41d6-4414-9e4f-f35eee484264",
+   "id": "fcdf6207-bb31-44ac-9a6f-5d1ccb7b3ed6",
    "metadata": {},
    "outputs": [],
    "source": []
